Modifications to get LarpManager to run as a standalone webapp one a new domain.

--- a/larpmanager/fixtures/skin.yaml
+++ b/larpmanager/fixtures/skin.yaml
@@ -2,7 +2,7 @@
   pk: 1
   fields:
     name: LarpManager
-    domain: larpmanager.com
+    domain: larpmanager.cpularp.com
 - model: larpmanager.associationskin
   pk: 2
   fields:
