Basic scaffolding for ciharacterinventory and pooltypes

--- a/larpmanager/fixtures/event_permission.yaml
+++ b/larpmanager/fixtures/event_permission.yaml
@@ -790,3 +790,25 @@
     hidden: false
     feature: 66
     module: 15
+- model: larpmanager.eventpermission
+  pk: 83
+  fields:
+    name: Character Inventory
+    descr: Manage character inventories and their items
+    slug: orga_ci_character_inventory
+    number: 51
+    config: null
+    hidden: false
+    feature: 120
+    module: 16
+- model: larpmanager.eventpermission
+  pk: 84
+  fields:
+    name: Pool Types
+    descr: Manage character inventory pool types
+    slug: orga_ci_pool_types
+    number: 53
+    config: null
+    hidden: false
+    feature: 120
+    module: 16
